--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     margin: 0;
   }
   .bg-image {
-    background-image: url('fon.png');
+    background-image: url('phon2.jpg');
     background-size: cover;
     background-position: center;
     height: 100%;
@@ -39,7 +39,8 @@
 
 <div class="bg-image"></div>
 
-<button class="btn-link" onclick="window.location.href='your_link.html';">Open Link</button>
+<button class="btn-link" onclick="window.location.href='https://miro.com/app/board/uXjVN8oy9Q0=/?share_link_id=517291623507';">Перейти до Miro Board</button>
+
 
 </body>
 </html>
