--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   }
   .bg-image {
     background-image: url('phon2.jpg');
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     height: 100%;
   }
