--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     margin: 0;
   }
   .bg-image {
-    background-image: url('phon2.jpg');
-    background-size: contain;
-    background-position: center;
-    height: 100%;
-  }
+  background-image: url('phon2.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100%;
+}
+
   .btn-link {
     position: absolute;
     top: 50%;
