--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   }
   .bg-image {
   background-image: url('phon2.jpg');
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
   height: 100%;
 }
 
